# django-blog

./: README.md  db.sqlite3  mysite_data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
blog/static/css/: blog.css
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  list.html  share.html
mysite/: settings.py  urls.py
