[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Aleksei Mikhalev <mikhalev.aleksei1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-taggit = "^3.1.0"
markdown = "^3.4.3"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
